feat: Add H2 database integration and end-to-end demo with sample data
Database Setup:
- Added H2 2.2.224 dependency to pom.xml
- Full in-memory database initialization on app startup
- Persisted both GROUP and DIRECT expenses

Sample Data (5 users, 3 group expenses, 3 direct expenses):
- Users: Alice, Bob, Charlie, Diana, Eve
- GROUP: Europe Trip 2026 with Hotel (₹3000), Food (₹1200), Tours (₹1700)
- DIRECT: Movie tickets (Alice-Diana ₹600), Dinner (Diana-Eve-Bob ₹750), Taxi (Eve-Bob ₹300)

End-to-End Flow:
1. Initialize H2 in-memory database
2. Create 5 users and persist to database
3. Create GROUP expenses and save to database
4. Create DIRECT peer-to-peer expenses
5. Display user balance sheets
6. Display group settlement summary (total + optimal payments)
7. Display direct expense history with current balance

Results:
✅ GROUP settlement: Alice → Bob ₹800, Alice → Charlie ₹300
✅ DIRECT settlements: Alice owes Diana ₹300, Diana owes Eve ₹250, Bob owes Eve ₹100
✅ All data persisted and queried successfully from H2 database